[package]
name = "signal-backup-decode"
version = "0.2.4"
authors = ["Yelinz <30687616+Yelinz@users.noreply.github.com>", "pajowu <pajowu@pajowu.de>"]
build = "build.rs"
description = "A simple tool to decode signal backups"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/Yelinz/signal-backup-decode"
edition = "2024"

[dependencies]
protobuf = "3"
byteorder = "1.5"
rust-ini = "0.21"
clap = { version = "4", features = ["derive", "cargo"] }
simplelog = "0.12"
anyhow = "1.0"
log = "0.4"
rusqlite = "0.38"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
generic-array = "1.3.5"
subtle = "2.6"
indicatif = "0.18"
infer = "0.19"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"

[build-dependencies]
protobuf-codegen = { version = "3", optional = true }

[features]
default = []
rebuild-protobuf = ["protobuf-codegen"]
